--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button" type="button">Order Service</button>
+          <button class="button" type="button" data-modal-open>Order Service</button>
         </div>
       </section>
 
@@ -440,10 +440,24 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe-wrapper">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="footer-subscribe-form">
+              <label class="footer-subscribe-label">
+                  <input class="footer-subscribe-input" type="email" name="email-field" placeholder="E-mail">
+              </label>
+              <button type="submit" name="email-subscribe-button" class="footer-subscribe-button">
+                  Subscribe
+                  <svg class="footer-subscribe-icon" width="24" height="24">
+                      <use href="./images/icons.svg#icon-send"></use>
+                  </svg>
+              </button>
+                    </form>
+                </div>
       </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -494,7 +508,8 @@
                 </span>
                 I accept the terms and conditions of the
                 <a class="modal-link-text" href="">Privacy Policy</a></label>
-          </div>           
+          </div>
+          <button class="modal-button-submit" type="submit">Send</button>           
         </form>
 
   </body>
