--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-open" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -502,7 +502,7 @@
             <input class="modal-check-input visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
             <label class="modal-check-text" for="user-privacy">
                 <span class="modal-check-box">
-                    <svg class="modal-icon-check" width="16" height="16">
+                    <svg class="modal-icon-check" width="10" height="8">
                         <use href="./images/icons.svg#icon-Checkbox"></use>
                     </svg>
                 </span>
@@ -511,6 +511,7 @@
           </div>
           <button class="modal-button-submit" type="submit">Send</button>           
         </form>
-
+      </div>
+    </div>  
   </body>
 </html>
