--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <label class="modal-check-text" for="user-privacy">
                 <span class="modal-check-box">
                     <svg class="modal-icon-check" width="10" height="8">
-                        <use href="./images/icons.svg#icon-Checkbox"></use>
+                        <use href="./images/icons.svg#icon-check"></use>
                     </svg>
                 </span>
                 I accept the terms and conditions of the
