--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       <section class="section hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="button" type="button" data-modal-open>Order Service</button>
+          <button class="button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -443,17 +445,26 @@
         <div class="footer-subscribe-wrapper">
           <p class="footer-subscribe-text">Subscribe</p>
           <form class="footer-subscribe-form">
-              <label class="footer-subscribe-label">
-                  <input class="footer-subscribe-input" type="email" name="email-field" placeholder="E-mail">
-              </label>
-              <button type="submit" name="email-subscribe-button" class="footer-subscribe-button">
-                  Subscribe
-                  <svg class="footer-subscribe-icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-send"></use>
-                  </svg>
-              </button>
-                    </form>
-                </div>
+            <label class="footer-subscribe-label">
+              <input
+                class="footer-subscribe-input"
+                type="email"
+                name="email-field"
+                placeholder="E-mail"
+              />
+            </label>
+            <button
+              type="submit"
+              name="email-subscribe-button"
+              class="footer-subscribe-button"
+            >
+              Subscribe
+              <svg class="footer-subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -461,57 +472,84 @@
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black">
-            </use>
-          </svg>  
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-wrapper">
             <label class="modal-label" for="user-name">Name</label>
             <div class="modal-icon-wrapper">
-              <input class="modal-input" type="text" name="user-name" id="user-name" autofocus/>
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                autofocus
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
             </div>
           </div>
           <div class="modal-wrapper">
-            <label class="modal-label" for="phone">Phone</label> 
-            <div class="modal-icon-wrapper">              
-              <input class="modal-input" type="tel" name="phone" id="icon-phone" />
+            <label class="modal-label" for="icon-phone">Phone</label>
+            <div class="modal-icon-wrapper">
+              <input
+                class="modal-input"
+                type="tel"
+                name="phone"
+                id="icon-phone"
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
-              </svg>  
+              </svg>
             </div>
           </div>
           <div class="modal-wrapper">
-            <label class="modal-label" for="email">Email</label> 
-            <div class="modal-icon-wrapper">              
-              <input class="modal-input" type="email" name="email" id="icon-email" />
+            <label class="modal-label" for="icon-email">Email</label>
+            <div class="modal-icon-wrapper">
+              <input
+                class="modal-input"
+                type="email"
+                name="email"
+                id="icon-email"
+              />
               <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
-              </svg>  
+              </svg>
             </div>
           </div>
           <div class="field-comment">
-            <label class="modal-label" for="user-comment">Comment</label> 
-            <textarea class="modal-textarea" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-textarea"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
           </div>
           <div class="modal-check-wrapper">
-            <input class="modal-check-input visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true">
+            <input
+              class="modal-check-input visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+            />
             <label class="modal-check-text" for="user-privacy">
-                <span class="modal-check-box">
-                    <svg class="modal-icon-check" width="10" height="8">
-                        <use href="./images/icons.svg#icon-check"></use>
-                    </svg>
-                </span>
-                I accept the terms and conditions of the
-                <a class="modal-link-text" href="">Privacy Policy</a></label>
+              <span class="modal-check-box">
+                <svg class="modal-icon-check" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-link-text" href="">Privacy Policy</a></label
+            >
           </div>
-          <button class="modal-button-submit" type="submit">Send</button>           
+          <button class="modal-button-submit" type="submit">Send</button>
         </form>
       </div>
-    </div>  
+    </div>
   </body>
 </html>
